--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=VitconLink
-version=1.0.0
+version=1.0.1
 author=vitcon <master@vitcon.co.kr>
 maintainer=Park, Nil <kspark@vitcon.co.kr>
-sentence=A library package for interfacing the microcontroller with VITCON IoT-Link modules.
-paragraph=This is a peripheral driver library for IoT-Link hardware modules such as NTC-Link for example.
+sentence=A library package for interfacing the microcontroller with VITCON Link modules.
+paragraph=This is a peripheral driver library for Modlink hardware modules example.
 category=Device Control
 url=https://github.com/vitcon-iot/VitconLink
 architectures=avr
